# cross-modal-multivector-search

./: .gitignore  CMakeLists.txt  run_roargraph_search_test.sh  run_roargraph_test.sh
expr_configs/: dive.yaml  dive_train.yaml  dive_train_i2i&t.yaml  dive_train_temp.yaml
include/: index_bipartite.h  multivector_reranker.h  test_class.h  utility_methods.h
include/efanna2e/: distance.h  neighbor.h  util.h
include/hnswlib/: hnswalg.h
scripts/: accum_latency.py  aggregate_result_for_multivector.py  build_roargraph_index.sh  generate_groundtruth.sh  get_pair_recall_from_tsv.py  run_roargraph_search_expr.sh  run_roargraph_search_multivector_expr.sh  run_roargraph_search_multivector_fullscan_rerank.sh  run_roargraph_search_multivector_rerank_expr.sh  run_roargraph_search_randvector_rerank.sh  run_roargraph_search_varying_degree.sh  run_test_KNN_Significance.sh
scripts/figure/: gen_figure.py  gen_figure_temp.py
scripts/hnsw/: build_hnsw_index.sh  run_hnsw_search_multivector_rerank_expr.sh  run_hnsw_search_singlevector_expr.sh
scripts/nsg/: build_nsg_index.sh  run_nsg_search_multivector_rerank_expr.sh
scripts/roargraph/: build_roargraph_index.sh  run_roargraph_search_multivector_fullscan_rerank.sh  run_roargraph_search_multivector_rerank_expr.sh  run_roargraph_search_multivector_rerank_temp_expr.sh  run_roargraph_search_singlevector_expr.sh
scripts/tests/: test_NNWise_cosine_sim_dist.sh  test_cosine_sim_dist.sh
scripts/utils/: accum_latency.py  convert_gt_to_csv.py  gen_rand_ids.sh  generate_dive_set_groundtruth.sh  generate_sampled_vectors.sh  generate_vector_groundtruth.sh  generate_vector_groundtruth_for_non_set_search.sh  send_expr_finish_message.sh  test_dive_pair_recall.sh
src/: CMakeLists.txt  index_bipartite.cpp  multivector_reranker.cpp  test_class.cpp  utility_methods.cpp
tests/: CMakeLists.txt  compare_two_ibin_and_validate_superset.cpp  extract_vectorsets.cpp  gen_rand_ids.cpp  gen_vector_groundtruth.cpp  test_KNN_significance.cpp  test_NN_cosine_sim_dist.cpp  test_dive_emb_pair_recall.cpp  test_rand_vector.cpp  test_search_multivector_fullscan_rerank.cpp  test_search_multivector_rerank.cpp  test_search_multivector_rerank_temp.cpp  test_search_multivector_roargraph.cpp  test_search_singlevector_rerank.cpp
tests/hnsw/: build_hnsw.cpp  search_rerank_hnsw.cpp  search_singlevector_hnsw.cpp
tests/nsg/: build_nsg.cpp  search_rerank_nsg.cpp
